# GifDisplay

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/csz/gif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/csz/gif/: GifLoader.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/csz/gif/: ExampleUnitTest.java
